# subopt-kaks

./: .gitignore  Changelog  README  README.md
man/: cds_zuker_align.1  yn00_cds_prealigned.1  yn00_zuker_align.1  zuker_align.1
matricies/nt/: IDENTITY.4.2  pupy.4.2  pupy.4.4
scripts/: make_ortho_pairfiles.pl  run-dir.pl
squid/: LOG  Makefile.in  a2m.c  afetch_main.c  aligneval.c  alignio.c  alistat_main.c  clustal.c  cluster.c  compalign_main.c  compstruct_main.c  configure  configure.ac  dayhoff.c  eps.c  file.c  getopt.c  gki.c  gki.h  gsi.c  gsi.h  gsi64.c  gsi64.h  hsregex.c  iupac.c  msa.c  msa.h  msf.c  phylip.c  revcomp.c  revcomp_main.c  rk.c  rk.h  selex.c  seqencode.c  seqsplit_main.c  seqstat_main.c  sfetch_main.c  shuffle.c  shuffle_main.c  (+26 more)
squid/Licenses/: gnu
squid/Man/: afetch.man  alistat.man  seqstat.man  sfetch.man  shuffle.man  sreformat.man
squid/Testsuite/: Makefile.in  sqdconfig_main.c
src/: Makefile  align.h  cds_zuker_align.c  mrtrans.c  mrtrans.h  paml.h  tools.c  treesub.c  util.c  util.h  yn00_cds_optimal.c  yn00_cds_prealigned.c  yn00_simple.c  yn00_zuker_align.c  zuker.c  zuker_align.c
tst/: F35G8.1_CBG16160.cds.aln  F35G8.1_CBG16160.cds.fas  F35G8.1_CBG16160.pep  F35G8.1_CBG16160.pep.aln  HIV_test.fa  four.fasta  one.fasta  testfile1.fa  testfile2.fa  three.fasta  two.fasta
